--- a/queue/pom.xml
+++ b/queue/pom.xml
@@ -5,6 +5,9 @@
     <groupId>it.rybak</groupId>
     <artifactId>artemis-pom</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <modules>
+        <module>producer</module>
+    </modules>
     <packaging>pom</packaging>
 
     <name>Artemis General POM</name>
