example of queue consumer using spring boot, refactoring of poms

--- a/spring-boot-queue/jms-consumer/pom.xml
+++ b/spring-boot-queue/jms-consumer/pom.xml
@@ -3,13 +3,30 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-boot-queue</artifactId>
         <groupId>it.rybak.activemq.artemis</groupId>
+        <artifactId>spring-boot-queue</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>it.rybak.activemq.artemis.spring.boot</groupId>
     <artifactId>jms-consumer</artifactId>
+    <packaging>jar</packaging>
+    <name>ActiveMQ Artemis JMS Queue Example using Spring Boot</name>
 
+    <properties>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
+    </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring.version}</version>
+            </plugin>
+        </plugins>
+    </build>
 </project>
